; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_rpc-proxy-search.c_rpc_proxy_search_on_send_end.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_rpc-proxy-search.c_rpc_proxy_search_on_send_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gather = type { i32, %struct.search_extra* }
%struct.search_extra = type { i32 }

@FLAG_RETRY_SEARCH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"saved_query_len = %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rpc_proxy_search_on_send_end(%struct.gather* %0) #0 {
  %2 = alloca %struct.gather*, align 8
  %3 = alloca %struct.search_extra*, align 8
  store %struct.gather* %0, %struct.gather** %2, align 8
  %4 = load %struct.gather*, %struct.gather** %2, align 8
  %5 = getelementptr inbounds %struct.gather, %struct.gather* %4, i32 0, i32 1
  %6 = load %struct.search_extra*, %struct.search_extra** %5, align 8
  store %struct.search_extra* %6, %struct.search_extra** %3, align 8
  %7 = load %struct.search_extra*, %struct.search_extra** %3, align 8
  %8 = getelementptr inbounds %struct.search_extra, %struct.search_extra* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @FLAG_RETRY_SEARCH, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %1
  %14 = load %struct.gather*, %struct.gather** %2, align 8
  %15 = call i32 @merge_save_query_remain(%struct.gather* %14)
  %16 = load %struct.gather*, %struct.gather** %2, align 8
  %17 = getelementptr inbounds %struct.gather, %struct.gather* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @vkprintf(i32 3, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @merge_save_query_remain(%struct.gather*) #1

declare dso_local i32 @vkprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
